# hanji

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  common_issue.md
.github/workflows/: ci.yml  pages.yml  release.yml
apps/hanji/: Cargo.toml
apps/hanji-rust/: Cargo.toml
apps/hanji/src/: editing.rs  encoding.rs  external.rs  file_browser.rs  main.rs  renderer.rs  session.rs  snapshot.rs
crates/hanji-core/: Cargo.toml
crates/hanji-editor/: Cargo.toml
crates/hanji-markdown/: Cargo.toml
crates/hanji-plugin-api/: Cargo.toml
crates/hanji-storage/: Cargo.toml
docs/: README.md  architecture.md  documentation-guide.md  keyboard-shortcuts.md  philosophy.md  plugin-api.md  qa-harness.md  releasing.md  roadmap.md  storage.md  table-block-editor.md  tauri-build.md  vision.md
docs/architecture/: README.md  crate-boundaries.md  editing-runtime.md  persistence.md  platform-adapters.md  rendering.md
docs/decisions/: 0001-markdown-source-of-truth.md  0002-portable-editor-facade.md  README.md
docs/design/: README.md  coordinate-systems.md  document-model.md  editing-policy.md  editor-api.md  editor-core.md  large-document-performance.md  live-preview.md  source-backed-wysiwyg.md
docs/development/: README.md  releasing.md  website.md
docs/plans/: README.md  web-editor.md  (+2 more)
scripts/: check-docs.py  extract-changelog-section.sh  package-macos.sh  run-tests.mjs
site/: index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
(+63 files in other folders)
