[package]
name = "hanji"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gpui.workspace = true
hanji-core.workspace = true
hanji-editor.workspace = true
hanji-markdown.workspace = true
hanji-storage.workspace = true
libc.workspace = true
